@@ -493,6 +493,7 @@ struct wzd_context_t {
 #define CFG_OPT_HIDE_DOTTED_FILES           0x00000002
 #define CFG_OPT_USE_SYSLOG                  0x00000010
 #define CFG_OPT_DISABLE_TLS                 0x00000100
+#define CFG_OPT_DISABLE_IDENT               0x00000200
 #define CFG_OPT_UTF8_CAPABLE                0x00001000
 
 
