@@ -1,3 +1,7 @@
+2005-11-21  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: add option to disable ident lookups
+
 2005-11-19  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: new event handler
